fix header spacing for mobile

--- a/public/css/coming-sssoon.css
+++ b/public/css/coming-sssoon.css
@@ -735,7 +735,7 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
     position: relative;
     text-align: center;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.33);
-    margin-top: 150px;
+    margin-top: 50px;
     z-index: 3;
 }
 .main .logo.cursive{
@@ -819,6 +819,9 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
     .main .subscribe .form-inline .btn{
         width: auto;
     }   
+    .main .logo {
+      margin-top: 150px;
+    }
 }
 @media (min-width:991px){        
     .main .subscribe .form-group{
